# ModelToll

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: custom_patterns.json  model_routing.json
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: index.css  main.tsx
dashboard/src/api/: client.ts  mock.ts
dashboard/src/components/: ErrorBoundary.tsx
dashboard/src/components/charts/: RequestsDonut.tsx  SavingsChart.tsx
dashboard/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/components/ui/: Badge.tsx  Card.tsx  KpiCard.tsx  Spinner.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: AuditLogs.tsx  Login.tsx  Models.tsx  Overview.tsx  Savings.tsx  Settings.tsx
dashboard/src/types/: index.ts
docker/: Dockerfile
src/: main.py
src/audit/: logger.py  models.py
src/config/: settings.py
src/dashboard/: api.py
src/proxy/: gateway.py  routes.py
src/router/: model_router.py
src/scrubber/: engine.py
tests/integration/: conftest.py  test_full_pipeline.py
tests/unit/: test_gateway.py  test_router.py  test_scrubber.py
